--- a/starwars/package.json
+++ b/starwars/package.json
@@ -3,9 +3,15 @@
   "version": "0.1.1",
   "private": true,
   "dependencies": {
-    "react": "^16.10.0",
-    "react-dom": "^16.10.0",
-    "react-scripts": "3.1.2"
+    "axios": "^0.19.0",
+    "bootstrap": "^4.4.1",
+    "react": "^16.12.0",
+    "react-bootstrap": "^1.0.0-beta.16",
+    "react-dom": "^16.12.0",
+    "react-dropdown": "^1.6.4",
+    "react-scripts": "3.1.2",
+    "reactstrap": "^8.2.0",
+    "styled-components": "^4.4.1"
   },
   "scripts": {
     "start": "react-scripts start",
